gcc/testsuite/rust/rustc/ui/intrinsics/feature-gate-safe-intrinsic_dg.rs
#[rustc_safe_intrinsic]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
// { dg-error ".E0658." "" { target *-*-* } .-2 }
fn safe() {}

fn main() {}

